rebuild connection check for new server infrastructure