@@ -19,12 +19,12 @@
 
 package de.unijena.bioinf.ms.gui.actions;
 
-import com.auth0.jwt.interfaces.DecodedJWT;
 import de.unijena.bioinf.ms.frontend.core.ApplicationCore;
 import de.unijena.bioinf.ms.gui.compute.jjobs.Jobs;
 import de.unijena.bioinf.ms.gui.configs.Icons;
 import de.unijena.bioinf.ms.gui.login.AccountDialog;
 import de.unijena.bioinf.ms.gui.net.ConnectionMonitor;
+import de.unijena.bioinf.webapi.Tokens;
 import org.jetbrains.annotations.Nullable;
 import org.slf4j.LoggerFactory;
 
@@ -33,7 +33,7 @@ import javax.swing.*;
 import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 
 import static de.unijena.bioinf.ms.gui.mainframe.MainFrame.MF;
 
@@ -58,18 +58,19 @@ public class ShowAccountDialog extends AbstractAction {
     protected synchronized void setIcon(final @Nullable ConnectionMonitor.ConnetionCheck check) {
         if (check != null) {
             if (check.isLoggedIn()) {
-                @Nullable DecodedJWT token = ApplicationCore.WEB_API.getAuthService().getToken().getDecodedIdToken();
-                if (token == null) {
+                URI imageURI = ApplicationCore.WEB_API.getAuthService().getToken()
+                        .flatMap(Tokens::getUserImage).orElse(null);
+
+                if (imageURI == null) {
                     putValue(Action.LARGE_ICON_KEY, Icons.USER_32); //bad login
                     return;
                 }
 
                 try {
-                    Image image = ImageIO.read(new URL(token.getClaim("picture").asString()));
+                    Image image = ImageIO.read(imageURI.toURL());
                     image = Icons.makeEllipse(image);
                     image = Icons.scaledInstance(image, 32, 32);
                     putValue(Action.LARGE_ICON_KEY, new ImageIcon(image));
-                    return;
                 } catch (IOException e) {
                     putValue(Action.LARGE_ICON_KEY, Icons.USER_GREEN_32); //login is fine but image is broken
                     LoggerFactory.getLogger(getClass()).warn("Could not load User image from token. Using placeholder instead.");
